--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <p class="titletext"></p>
         <a href="https://www.tiktok.com/@ignnahciak">TIKTOK</a>
         <a href="https://pl.namemc.com/profile/Nahciak.1">NAMEMC</a>
-        <a href="">GITHUB</a>
+        <a href="https://github.com/Nahciak">GITHUB</a>
         <a href="http://dc.stiwekmc.store">DISCORD</a>
     </header>
     <nav>
         <ul>
             <li>
-                <a href="">Contact</a>
+                <a href="contact.txt">Contact</a>
             </li>
             <li>
                 <a href="">About</a>
@@ -35,12 +35,12 @@
         <h1 id="projects">Here are some of my <span class="projectspan">projects</span></h1>
         <div class="projects">
             <section>
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front stiwek">
+                <div class="flip">
+                    <div class="flip-inner">
+                      <div class="flip-front stiwek">
                         <h2>Minecraft Server</h2>
                       </div>
-                      <div class="flip-card-back" onclick="window.open('https://stiwekmc.store', '_self')">
+                      <div class="flip-back" onclick="window.open('https://stiwekmc.store', '_self')">
                         <h2>StiwekMC.pl</h2>
                         <p>Minecraft BoxPvP Server</p>
                         <p>1.16+ Non-Premium</p>
@@ -49,23 +49,26 @@
                   </div>
             </section>
             <section>
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front video">
+                <div class="flip">
+                    <div class="flip-inner">
+                      <div class="flip-front video">
                         <h2>Video edits</h2>
                       </div>
-                      <div class="flip-card-back">
+                      <div class="flip-back">
+                        <h2>Video edits</h2>
                       </div>
                     </div>
                   </div>
             </section>
             <section>
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front">
+                <div class="flip">
+                    <div class="flip-inner">
+                      <div class="flip-front">
                         <h2>Websites</h2>
                       </div>
-                      <div class="flip-card-back">
+                      <div class="flip-back">
+                        <h2>Websites</h2>
+                        <a href="https://stiwekmc.store">StiwekMC.store</a>
                       </div>
                     </div>
                   </div>
