--- a/index.html
+++ b/index.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Nahciak</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="img/test.svg">
+    <title>Strona Główna | StiwekMC</title>
+    <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <header>
-        <h1 class="title">Nahciak</h1>
-        <h1 class="title orange">Epic Website</h1>
-        <p class="titletext"></p>
-        <a href="https://www.tiktok.com/@ignnahciak">TIKTOK</a>
-        <a href="https://pl.namemc.com/profile/Nahciak.1">NAMEMC</a>
-        <a href="https://github.com/Nahciak">GITHUB</a>
-        <a href="http://dc.stiwekmc.store">DISCORD</a>
+        <img src="img/icon.png" alt="">
+        <h1>
+            <a href="">StiwekMC</a>
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="" style="color: #525252;">HOME</a>
+                </li>
+                <li>
+                    <a href="https://discord.gg/NrY24bKSgX">DISCORD</a>
+                </li>
+                <li>
+                    <a href="https://mapa.stiwekmc.pl">MAPA EARTHSMP</a>
+                </li>
+                <li>
+                    <a href="pages/rangi.html">RANGI</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="contact.txt">Contact</a>
-            </li>
-            <li>
-                <a href="">About</a>
-            </li>
-            <li>
-                <a href="#projects">Projects</a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <h1 id="projects">Here are some of my <span class="projectspan">projects</span></h1>
-        <div class="projects">
-            <section>
-                <div class="flip">
-                    <div class="flip-inner">
-                      <div class="flip-front stiwek">
-                        <h2>Minecraft Server</h2>
-                      </div>
-                      <div class="flip-back" onclick="window.open('https://stiwekmc.store', '_self')">
-                        <h2>StiwekMC.pl</h2>
-                        <p>Minecraft BoxPvP Server</p>
-                        <p>1.16+ Non-Premium</p>
-                      </div>
-                    </div>
-                  </div>
-            </section>
-            <section>
-                <div class="flip">
-                    <div class="flip-inner">
-                      <div class="flip-front video">
-                        <h2>Video edits</h2>
-                      </div>
-                      <div class="flip-back">
-                        <h2>Video edits</h2>
-                      </div>
-                    </div>
-                  </div>
-            </section>
-            <section>
-                <div class="flip">
-                    <div class="flip-inner">
-                      <div class="flip-front">
-                        <h2>Websites</h2>
-                      </div>
-                      <div class="flip-back">
-                        <h2>Websites</h2>
-                        <a href="https://stiwekmc.store">StiwekMC.store</a>
-                      </div>
-                    </div>
-                  </div>
-            </section>
-        </div>
+    <main id="home" data-aos="zoom-in-right">
+        <section class="title">
+            <h1 class="titletext">Stiwek<span class="mc">MC.PL</span></h1>
+            <p>SIEĆ SERWERÓW MINECRAFT DLA GRACZY NON-PREMIUM.</p>
+        </section>
+        <section class="menu">
+            <a href="https://discord.gg/pGzKNkbDmF" class="shop">Sklep</a>
+            <a href="https://discord.gg/NrY24bKSgX" class="discord">Discord</a>
+            <a href="https://www.tiktok.com/@stiwekmcpl" class="tiktok">TikTok</a>
+        </section>
+        <section class="zalety" id="zalety">
+            <a href="#zalety"><img src="img/expand.png" class="icon" alt=""></a>
+            <h2 class="subtitletext" style="color: #2a1c0c">Dlaczego akurat StiwekMC?</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h1>Innowacje</h1>
+                    <p>Ciekawe tryby z wieloma nowościami, których nie spotkasz na innych serwerach. Z każdym dniem poszerzamy swoje umiejętności, aby podnieść jakość rozgrywki na serwerze.</p>
+                </div>
+                <div class="grid-item">
+                    <h1>Aktualizacje</h1>
+                    <p>Częste aktualizacje z nowymi funkcjami, aby rozgrywka nie była nudna. Oczywiście wszystko w granicach naszych możliwości!</p>
+                </div>
+                <div class="grid-item">
+                    <h1>Atmosfera</h1>
+                    <p>Aktywna administracja i chętna pomoc to podstawa. Stawiamy na miłą atmosferę i dobre odczucia graczy, oczywiście z zachowaną wolnością słowa na chacie.</p>
+                </div>
+            </div>
+        </section>
+        <section class="tryb" id="minibox" data-aos="fade-up">
+            <h2 class="subtitletext"><span style="color: #2a1c0c">Nasze</span> TRYBY</h2>
+            <div class="trybimg mini">
+                <h1 class="trybtext">MiniBox (1.17 - 1.19)</h1>
+            </div>
+            <div class="trybimg earth">
+                <h1 class="trybtext">EarthSMP (1.17 - 1.19)</h1>
+            </div>
+        </section>
     </main>
-    <footer>
-      <h3>NAHCIAK</h3>
+    <footer data-aos="fade-up" class="footer">
+        <a href="#home">StiwekMC.pl | Made by Nahciak#1537</a>
     </footer>
+    <script src="bower_components/aos/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
+<!-- Nahciak -->
