--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <h1 class="title">Nahciak</h1>
-        <h1 class="title orange">Epic Website</h1>
+        <h1 class="title orange">Private Website</h1>
         <p class="titletext"></p>
         <a href="https://www.tiktok.com/@ignnahciak">TIKTOK</a>
         <a href="https://pl.namemc.com/profile/Nahciak.1">NAMEMC</a>
         <a href="https://github.com/Nahciak">GITHUB</a>
-        <a href="http://dc.stiwekmc.store">DISCORD</a>
+        <a href="https://discord.gg/57QnXYFt7A">DISCORD</a>
     </header>
     <nav>
         <ul>
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <main>
-        <h1 id="projects">Here are some of my <span class="projectspan">projects</span></h1>
+        <h1 id="projects">Here are some of my <span class="projectspan">projects</span>...</h1>
         <div class="projects">
             <section>
                 <div class="flip">
@@ -40,10 +40,10 @@
                       <div class="flip-front stiwek">
                         <h2>Minecraft Server</h2>
                       </div>
-                      <div class="flip-back" onclick="window.open('https://stiwekmc.store', '_self')">
+                      <div class="flip-back" onclick="window.open('https://stiwekmc.pl', '_self')">
                         <h2>StiwekMC.pl</h2>
-                        <p>Minecraft BoxPvP Server</p>
-                        <p>1.16+ Non-Premium</p>
+                        <p>Minecraft EarthSMP Server</p>
+                        <p>1.17+ Non-Premium</p>
                       </div>
                     </div>
                   </div>
@@ -68,7 +68,7 @@
                       </div>
                       <div class="flip-back">
                         <h2>Websites</h2>
-                        <a href="https://stiwekmc.store">StiwekMC.store</a>
+                        <a href="https://stiwekmc.pl">StiwekMC.pl</a>
                       </div>
                     </div>
                   </div>
