--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Nahciak</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="img/test.svg">
 </head>
 <body>
@@ -56,9 +56,10 @@
           </div>
           <div class="card">
             <h2>Some unrelased games</h2>
-            <p>Ginger</p>
+            <p>Ginger - 2D RPG</p>
             <p>Himno inspired game</p>
             <p>FNAF inspired game</p>
+            <p>LONGEYED PROJ inspired game</p>
           </div>
         </div>
     </main>
