--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Nahciak</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="img/test.svg">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/pfp.webp">
 </head>
 <body>
     <nav>
       <ul>
-          <li>
-            <a href="contact.txt">Contact</a>
-          </li>
-          <li>
-            <a href="">About</a>
-          </li>
-          <li>
-            <a href="#projects">Projects</a>
-          </li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#projects">Projects</a>
+        </li> 
+        <li>
+          <a href="contact.txt">Contact</a>
+        </li>
       </ul>
     </nav>
     <main>
-      <section class="hero">
+      <section class="hero" id="about">
         <section class="title">
           <h1>Nahciak's</h1>
-          <h1 class="purp">Private Website</h1>
+          <h1 class="purp">Portfolio Website</h1>
         </section>
         <section class="desc">
           <p>Hello! I'm Nahciak, and I'm a junior developer.</p>
@@ -42,24 +42,32 @@
         <div class="projects">
           <div class="card" onclick="window.open('https://stiwekmc.pl', '_self')">
             <h2>StiwekMC.pl</h2>
+            <img src="img/icon3.png" alt="">
             <p>Minecraft EarthSMP Server</p>
             <p>1.17+ Non-Premium</p>
+            <a href="https://www.tiktok.com/@stiwekmcpl">TikTok</a>
+            <a href="https://www.tiktok.com/@stiwekmc.fp">TikTok FanPage</a>
           </div>
           <div class="card">
-            <h2>Video edits</h2>
-            <p>PLACEHOLDER</p>
+            <!-- <h2>Video Effects</h2>
+            <p>NOT PUBLISHED</p>
+            <img src="img/room.png" alt=""> -->
           </div>
           <div class="card">
-            <h2>Websites</h2>
-            <p>PLACEHOLDER</p>
-            <a href="https://stiwekmc.pl">StiwekMC.pl</a>
+            <!-- <h2>Websites</h2>
+            <p>NOT PUBLISHED</p>
+            <a href="https://stiwekmc.pl">StiwekMC.pl</a> -->
           </div>
           <div class="card">
-            <h2>Some unrelased games</h2>
+            <!-- <h2>Some unrelased games</h2>
             <p>Ginger - 2D RPG</p>
             <p>Himno inspired game</p>
             <p>FNAF inspired game</p>
-            <p>LONGEYED PROJ inspired game</p>
+            <p>LONGEYED PROJ inspired game</p> -->
+          </div>
+          <div class="card">
+            <!-- <h2>Graphics</h2>
+            <p>NOT PUBLISHED</p> -->
           </div>
         </div>
     </main>
