--- a/index.html
+++ b/index.html
@@ -38,38 +38,38 @@
         <a href="https://github.com/Nahciak">GITHUB</a>
         <a href="https://discord.gg/57QnXYFt7A">DISCORD</a>
       </section>
-        <h1 id="projects">Here are some of my <span class="projectspan">projects</span>...</h1>
-        <div class="projects">
-          <div class="card" onclick="window.open('https://stiwekmc.pl', '_self')">
-            <h2>StiwekMC.pl</h2>
-            <img src="img/icon3.png" alt="">
-            <p>Minecraft EarthSMP Server</p>
-            <p>1.17+ Non-Premium</p>
-            <a href="https://www.tiktok.com/@stiwekmcpl">TikTok</a>
-            <a href="https://www.tiktok.com/@stiwekmc.fp">TikTok FanPage</a>
-          </div>
-          <div class="card">
-            <!-- <h2>Video Effects</h2>
-            <p>NOT PUBLISHED</p>
-            <img src="img/room.png" alt=""> -->
-          </div>
-          <div class="card">
-            <!-- <h2>Websites</h2>
-            <p>NOT PUBLISHED</p>
-            <a href="https://stiwekmc.pl">StiwekMC.pl</a> -->
-          </div>
-          <div class="card">
-            <!-- <h2>Some unrelased games</h2>
-            <p>Ginger - 2D RPG</p>
-            <p>Himno inspired game</p>
-            <p>FNAF inspired game</p>
-            <p>LONGEYED PROJ inspired game</p> -->
-          </div>
-          <div class="card">
-            <!-- <h2>Graphics</h2>
-            <p>NOT PUBLISHED</p> -->
-          </div>
+      <h1 id="projects">Here are some of my <span class="projectspan">projects</span>...</h1>
+      <div class="projects">
+        <div class="card" onclick="window.open('https://stiwekmc.pl', '_self')">
+          <h2>StiwekMC.pl</h2>
+          <img src="img/icon3.png" alt="">
+          <p>Minecraft EarthSMP Server</p>
+          <p>1.17+ Non-Premium</p>
+          <a href="https://www.tiktok.com/@stiwekmcpl">TikTok</a>
+          <a href="https://www.tiktok.com/@stiwekmc.fp">TikTok FanPage</a>
         </div>
+        <div class="card hide">
+          <h2>Video Effects</h2>
+          <p>NOT PUBLISHED</p>
+          <img src="img/room.png" alt="">
+        </div>
+        <div class="card hide">
+          <h2>Websites</h2>
+          <p>NOT PUBLISHED</p>
+        <a href="https://stiwekmc.pl">StiwekMC.pl</a>
+        </div>
+        <div class="card hide">
+          <h2>Some unrelased games</h2>
+          <p>Ginger - 2D RPG</p>
+          <p>Himno inspired game</p>
+          <p>FNAF inspired game</p>
+          <p>LONGEYED PROJ inspired game</p>
+        </div>
+        <div class="card hide">
+          <h2>Graphics</h2>
+          <p>NOT PUBLISHED</p>
+        </div>
+      </div>
     </main>
     <footer>
       <h3>DISCORD @NAHCIAK</h3>
