--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Home | Nahciak</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/pfp.webp">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
