--- a/index.html
+++ b/index.html
@@ -43,23 +43,27 @@
       </section>
       <h1 id="projects">Here are some of my <span class="projectspan">projects</span>...</h1>
       <div class="projects">
-        <div class="card" onclick="window.open('https://stiwekmc.pl', '_self')">
+        <div class="card">
           <h2>StiwekMC.pl</h2>
-          <img src="img/icon3.png" alt="">
-          <p>Minecraft EarthSMP Server</p>
+          <img src="img/stiwekmc.png" alt="">
+          <p>Minecraft EarthSMP Server & Website</p>
           <p>1.17+ Non-Premium</p>
-          <a href="https://www.tiktok.com/@stiwekmcpl">TikTok</a>
-          <a href="https://www.tiktok.com/@stiwekmc.fp">TikTok FanPage</a>
+          <br>
+          <a href="https://stiwekmc.pl/">Website</a>
+          <a href="https://www.tiktok.com/@stiwekmc.fp/">TikTok</a>
         </div>
         <div class="card hide">
           <h2>Video Effects</h2>
           <p>NOT PUBLISHED</p>
           <img src="img/room.png" alt="">
         </div>
-        <div class="card hide">
+        <div class="card">
           <h2>Websites</h2>
-          <p>NOT PUBLISHED</p>
-        <a href="https://stiwekmc.pl">StiwekMC.pl</a>
+          <img src="img/pfp.webp" alt="">
+          <br><br>
+          <a href="">Nahciak.github.io</a>
+          <a href="https://stiwekmc.pl">StiwekMC.pl</a>
+          <a href="http://koxplay.pl/">KoxPlay.pl</a>
         </div>
         <div class="card hide">
           <h2>Some unrelased games</h2>
@@ -75,7 +79,7 @@
       </div>
     </main>
     <footer>
-      <h3>DISCORD @NAHCIAK</h3>
+      <h3>MADE WITH <span class="heart"> ❤ </span> BY @NAHCIAK</h3>
     </footer>
 </body>
 </html>
