--- a/index.html
+++ b/index.html
@@ -1,85 +1,85 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Nahciak</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/pfp.webp">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home | Nahciak</title>
+<link rel="stylesheet" href="css/style. css">
+<link rel="icon" href="img/pfp. webp">
+<link rel="preconnect" href="https: //fonts. googleapis. com">
+<link rel="preconnect" href="https: //fonts. gstatic. com" crossorigin>
+<link href="https: //fonts. googleapis. com/css2? family=Sora: wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="#about">About</a>
-        </li>
-        <li>
-          <a href="#projects">Projects</a>
-        </li> 
-        <li>
-          <a href="contact.txt">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <main>
-      <section class="hero" id="about">
-        <section class="title">
-          <h1>Nahciak's</h1>
-          <h1 class="purp">Portfolio Website</h1>
-        </section>
-        <section class="desc">
-          <p>Hello! I'm Nahciak, and I'm a junior developer.</p>
-          <p>Learning: C#, Java, Python, HTML, CSS, JavaScript.</p>
-          <p>Interesed in coding and gamedev for 3 years as a hobby.</p>
-        </section>
-        <a href="https://www.tiktok.com/@ignnahciak">TIKTOK</a>
-        <a href="https://pl.namemc.com/profile/Nahciak.1">NAMEMC</a>
-        <a href="https://github.com/Nahciak">GITHUB</a>
-        <a href="https://discord.gg/57QnXYFt7A">DISCORD</a>
-      </section>
-      <h1 id="projects">Here are some of my <span class="projectspan">projects</span>...</h1>
-      <div class="projects">
-        <div class="card">
-          <h2>StiwekMC.pl</h2>
-          <img src="img/stiwekmc.png" alt="">
-          <p>Minecraft EarthSMP Server & Website</p>
-          <p>1.17+ Non-Premium</p>
-          <br>
-          <a href="https://stiwekmc.pl/">Website</a>
-          <a href="https://www.tiktok.com/@stiwekmc.fp/">TikTok</a>
-        </div>
-        <div class="card hide">
-          <h2>Video Effects</h2>
-          <p>NOT PUBLISHED</p>
-          <img src="img/room.png" alt="">
-        </div>
-        <div class="card">
-          <h2>Websites</h2>
-          <img src="img/pfp.webp" alt="">
-          <br><br>
-          <a href="">Nahciak.github.io</a>
-          <a href="https://stiwekmc.pl">StiwekMC.pl</a>
-          <a href="http://koxplay.pl/">KoxPlay.pl</a>
-        </div>
-        <div class="card hide">
-          <h2>Some unrelased games</h2>
-          <p>Ginger - 2D RPG</p>
-          <p>Himno inspired game</p>
-          <p>FNAF inspired game</p>
-          <p>LONGEYED PROJ inspired game</p>
-        </div>
-        <div class="card hide">
-          <h2>Graphics</h2>
-          <p>NOT PUBLISHED</p>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <h3>MADE WITH <span class="heart"> ❤ </span> BY @NAHCIAK</h3>
-    </footer>
+<nav>
+<ul>
+<li>
+<a href="#about">About</a>
+</li>
+<li>
+<a href="#projects">Projects</a>
+</li>
+<li>
+<a href="contact. txt">Contact</a>
+</li>
+</ul>
+</nav>
+<main>
+<section class="hero" id="about">
+<section class="title">
+<h1>Nahciak's</h1>
+<h1 class="purp">Portfolio Website</h1>
+</section>
+<section class="desc">
+<p>Hello! I'm Nahciak, and I'm a junior developer. </p>
+<p>Learning: C#, Java, Python, HTML, CSS, JavaScript. </p>
+<p>Interesed in coding and gamedev for 3 years as a hobby. </p>
+</section>
+<a href="https: //www. tiktok. com/@ignnahciak">TIKTOK</a>
+<a href="https: //pl. namemc. com/profile/Nahciak.1">NAMEMC</a>
+<a href="https: //github. com/Nahciak">GITHUB</a>
+<a href="https: //discord. gg/57QnXYFt7A">DISCORD</a>
+</section>
+<h1 id="projects">Here are some of my <span class="projectspan">projects</span>... </h1>
+<div class="projects">
+<div class="card">
+<h2>StiwekMC. pl</h2>
+<img src="img/stiwekmc. png" alt="">
+<p>Minecraft EarthSMP Server & Website</p>
+<p>1.17+ Non-Premium</p>
+<br>
+<a href="https: //stiwekmc. pl/">Website</a>
+<a href="https: //www. tiktok. com/@stiwekmc. fp/">TikTok</a>
+</div>
+<div class="card hide">
+<h2>Video Effects</h2>
+<p>NOT PUBLISHED</p>
+<img src="img/room. png" alt="">
+</div>
+<div class="card">
+<h2>Websites</h2>
+<img src="img/pfp. webp" alt="">
+<br><br>
+<a href="">Nahciak. github. io</a>
+<a href="https: //stiwekmc. pl">StiwekMC. pl</a>
+<a href="http: //koxplay. pl/">KoxPlay. pl</a>
+</div>
+<div class="card hide">
+<h2>Some unrelased games</h2>
+<p>Ginger - 2D RPG</p>
+<p>Himno inspired game</p>
+<p>FNAF inspired game</p>
+<p>LONGEYED PROJ inspired game</p>
+</div>
+<div class="card hide">
+<h2>Graphics</h2>
+<p>NOT PUBLISHED</p>
+</div>
+</div>
+</main>
+<footer>
+<h3>MADE WITH <span class="heart">  </span> BY @NAHCIAK</h3>
+</footer>
 </body>
 </html>
