--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home | Nahciak</title>
-<link rel="stylesheet" href="css/style. css">
-<link rel="icon" href="img/pfp. webp">
-<link rel="preconnect" href="https: //fonts. googleapis. com">
-<link rel="preconnect" href="https: //fonts. gstatic. com" crossorigin>
-<link href="https: //fonts. googleapis. com/css2? family=Sora: wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+<link rel="icon" href="img/pfp.webp">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -21,7 +21,7 @@
 <a href="#projects">Projects</a>
 </li>
 <li>
-<a href="contact. txt">Contact</a>
+<a href="contact.txt">Contact</a>
 </li>
 </ul>
 </nav>
@@ -36,34 +36,34 @@
 <p>Learning: C#, Java, Python, HTML, CSS, JavaScript. </p>
 <p>Interesed in coding and gamedev for 3 years as a hobby. </p>
 </section>
-<a href="https: //www. tiktok. com/@ignnahciak">TIKTOK</a>
-<a href="https: //pl. namemc. com/profile/Nahciak.1">NAMEMC</a>
-<a href="https: //github. com/Nahciak">GITHUB</a>
-<a href="https: //discord. gg/57QnXYFt7A">DISCORD</a>
+<a href="https://www.tiktok.com/@ignnahciak">TIKTOK</a>
+<a href="https://pl.namemc.com/profile/Nahciak.1">NAMEMC</a>
+<a href="https://github.com/Nahciak">GITHUB</a>
+<a href="https://discord.gg/57QnXYFt7A">DISCORD</a>
 </section>
 <h1 id="projects">Here are some of my <span class="projectspan">projects</span>... </h1>
 <div class="projects">
 <div class="card">
 <h2>StiwekMC. pl</h2>
-<img src="img/stiwekmc. png" alt="">
+<img src="img/stiwekmc.png" alt="">
 <p>Minecraft EarthSMP Server & Website</p>
 <p>1.17+ Non-Premium</p>
 <br>
-<a href="https: //stiwekmc. pl/">Website</a>
-<a href="https: //www. tiktok. com/@stiwekmc. fp/">TikTok</a>
+<a href="https://stiwekmc.pl/">Website</a>
+<a href="https://www.tiktok.com/@stiwekmc.fp/">TikTok</a>
 </div>
 <div class="card hide">
 <h2>Video Effects</h2>
 <p>NOT PUBLISHED</p>
-<img src="img/room. png" alt="">
+<img src="img/room.png" alt="">
 </div>
 <div class="card">
 <h2>Websites</h2>
-<img src="img/pfp. webp" alt="">
+<img src="img/pfp.webp" alt="">
 <br><br>
 <a href="">Nahciak. github. io</a>
-<a href="https: //stiwekmc. pl">StiwekMC. pl</a>
-<a href="http: //koxplay. pl/">KoxPlay. pl</a>
+<a href="https://stiwekmc.pl">StiwekMC. pl</a>
+<a href="http://koxplay.pl/">KoxPlay. pl</a>
 </div>
 <div class="card hide">
 <h2>Some unrelased games</h2>
@@ -79,7 +79,7 @@
 </div>
 </main>
 <footer>
-<h3>MADE WITH <span class="heart">  </span> BY @NAHCIAK</h3>
+<h3>MADE WITH <span class="heart"> ❤ </span> BY @NAHCIAK</h3>
 </footer>
 </body>
 </html>
