--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="projects">
 <div class="card">
 <h2>StiwekMC.pl</h2>
-<img src="img/stiwekmc.png" alt="">
+<img src="img/stiwekmc.webp" alt="">
 <p>Minecraft EarthSMP Server & Website</p>
 <p>1.17+ Non-Premium</p>
 <br>
