--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <br><br>
 <a href="">Nahciak.github.io</a>
 <a href="https://stiwekmc.pl">StiwekMC.pl</a>
-<a href="http://koxplay.pl/">KoxPlay.pl</a>
+<a href="http://koxplay.pl/">KoxPlay.pl (juz nie)</a>
 </div>
 <div class="card hide">
 <h2>Some unrelased games</h2>
