--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 <h1 id="projects">Here are some of my <span class="projectspan">projects</span>... </h1>
 <div class="projects">
 <div class="card">
-<h2>StiwekMC.pl</h2>
-<img src="img/stiwekmc.webp" alt="">
+<h2>StivekMC.pl</h2>
+<img src="img/stivekmc.webp" alt="">
 <p>Minecraft EarthSMP Server & Website</p>
 <p>1.17+ Non-Premium</p>
 <br>
-<a href="https://stiwekmc.pl/">Website</a>
-<a href="https://www.tiktok.com/@stiwekmc.fp/">TikTok</a>
+<a href="https://stivekmc.pl/">Website</a>
+<a href="https://www.tiktok.com/@stivekmc.fp/">TikTok</a>
 </div>
 <div class="card hide">
 <h2>Video Effects</h2>
@@ -62,7 +62,7 @@
 <img src="img/pfp.webp" alt="">
 <br><br>
 <a href="">Nahciak.github.io</a>
-<a href="https://stiwekmc.pl">StiwekMC.pl</a>
+<a href="https://stivekmc.pl">StivekMC.pl</a>
 <a href="http://koxplay.pl/">KoxPlay.pl (juz nie)</a>
 </div>
 <div class="card hide">
