added copyright info

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <footer>
         <hr>
         <h3>MADE WITH <span class="heart"> ❤ </span> BY @NAHCIAK</h3>
+        <h3>Copyright © Nahciak 2023</h3>
     </footer>
     <script>
         let cloud = document.getElementById('move');
